Fix: all animations need to be shifted by 2s to avoid items overlapping

--- a/frontend/scss/components/molecules/rolling-formats.scss
+++ b/frontend/scss/components/molecules/rolling-formats.scss
@@ -24,8 +24,7 @@
     grid-column: 1 / -1;
     grid-row: 1 / -1;
     margin-right: auto;
-    animation: roll 8s cubic-bezier(0.25, 0.1, 0.25, 1) 1s infinite backwards;
-    animation-delay: -1s;
+    animation: roll 8s cubic-bezier(0.25, 0.1, 0.25, 1) -1s infinite backwards;
 
     @media (min-width: 768px) {
       margin-left: auto;
@@ -35,9 +34,9 @@
       margin-left: 0;
     }
 
-    &:nth-child(2) { animation-delay: 2s; opacity: 0; }
-    &:nth-child(3) { animation-delay: 4s; opacity: 0; }
-    &:nth-child(4) { animation-delay: 6s; opacity: 0; }
+    &:nth-child(2) { animation-delay: 1s; opacity: 0; }
+    &:nth-child(3) { animation-delay: 3s; opacity: 0; }
+    &:nth-child(4) { animation-delay: 5s; opacity: 0; }
   }
 }
 
